--- a/client/src/pages/css/Landing.css
+++ b/client/src/pages/css/Landing.css
@@ -14,7 +14,6 @@
 }
 
 .landingCard {
-    width: 40%;
     height: fit-content;
     opacity: .9;
     border-color: #25a4ad!important;
