--- a/client/src/pages/css/Login.css
+++ b/client/src/pages/css/Login.css
@@ -21,7 +21,6 @@
     border-color: #25a4ad!important;
     border-radius: 15px!important;
     border-style: inset!important;
-    width:30%;
 }
 .login.btn-primary {
     background-color: #17a2b8!important;
